try to set base

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Easy PWA</title>
+    <base href="https://cgosiak.github.io/easy_pwa/">
     <link rel="icon" type="image/png" href="images/icon_48x48.png"/>
     <script src="scripts/pwacompat.js"></script>
     <link rel="manifest" href="manifest.json">
